<resources>
    <string name="app_name">Biodata</string>
    <string name="btn_email">Email</string>
    <string name="btn_phone">Whatsapp</string>
    <string name="btn_address">Alamat</string>
    <string name="image_alt">Diablo</string>
    <string name="username">HISKIA ANGGI PUJI PRATAMA</string>
    <string name="nim">A11.2020.12730</string>
    <string name="hobbies">Hobi: Main ML, Nonton Film, Ngoding.</string>
    <string name="simple_desc">Deskripsi Singkat: People who rarely talk a lot like \ncoding the most.</string>
</resources>